Bug 527086: [java9] Support Java 9 - test fix, weaves into java.awt.datatransfer.Clipboard